test/should-fail/vsgc4173b.visage
/**
 * Regress test for VSGC-4173.
 *
 *  Improved support for forward references
 *
 * @compilearg -XDfwdRefOpt=oninvalidate
 * @compile vsgc4173sub.visage
 * @test/warning
 */
